Fix for double-click on tablets - again

--- a/assets/stylesheets/common.scss
+++ b/assets/stylesheets/common.scss
@@ -1,3 +1,7 @@
+.btn-klavado{
+    background-color: #090;
+}
+
 /* Don't know why this is 90% in the base topic.scss file but I'm making it 100% 
 #topic-title {
   .title-wrapper {float: left; width: 100%;}
